updated the footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,11 +39,13 @@
     <footer>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4">
-                    Coding Grace 2014 |||||||| <a href="https://twitter.com/codinggrace">@codinggrace</a> |||| <a href="https://www.facebook.com/pages/Coding-Grace/501098363273457">Facebook</a>
+                <div class="col-md-3">
+                    Coding Grace 2013 - 2014
                 </div>
-                <div class="col-md-4"></div>
                 <div class="col-md-4 text-right">
+                    <a href="https://twitter.com/codinggrace">@codinggrace</a> |||| <a href="https://www.facebook.com/pages/Coding-Grace/501098363273457">Facebook</a>
+                </div>
+                <div class="col-md-5 text-right">
                 <span class="glyphicon glyphicon-info-sign"></span> <a href="/colophon/">Colophon</a> |||| <a href="/resources/">Resources</a>
                 </div>
             </div>
