--- a/events/templates/events/event.html
+++ b/events/templates/events/event.html
@@ -35,6 +35,7 @@
 
                 {{event.description|md|safe}}
 
+                <h3><a href="/resources/"><span class="glyphicon glyphicon-wrench"></span> Useful resources</a></h3>
 
             </div>
             <div class="col-md-6">
