added links to pip and virtualenv in resources page

--- a/templates/codinggrace_django/resources/python.html
+++ b/templates/codinggrace_django/resources/python.html
@@ -23,6 +23,6 @@
     <ul>
         <li><a href="#commandline">Command Line</a> - You will end up turning to command line in your terminal/console and knowing a few basic command lines is really handy knowledge. It's quick and saves time.</li>
         <li><a href="#sourcecontrol">Source Control</a> - This is pretty essential nowadays regardless if you are working on your own project, with small/huge teams.</li>
-        <li>pip and virtualenv</li>
+        <li><a href="http://pip.readthedocs.org">pip</a> and <a href="http://virtualenv.readthedocs.org/en/latest/">virtualenv</a></li>
     </ul>
 </div>
