missing closing tags fixed

--- a/templates/codinggrace_django/about.html
+++ b/templates/codinggrace_django/about.html
@@ -67,7 +67,9 @@
                          <p>
                             If you are interested in running Coding Grace in your local area, please feel free to drop us an email.
                         </p>
-                        <p class="text-center"><a href="/chapters/" class="btn btn-primary" role="button">More info</a>
+                        <p class="text-center">
+                            <a href="/chapters/" class="btn btn-primary" role="button">More info</a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -118,6 +120,7 @@
 
                         </p>
                         <p class="text-center"><a href="https://docs.google.com/forms/d/12XbtEtgY_V1quYNgD3SHMPcXB2kDiNHzRl7FvVIaISc/viewform?usp=send_form" class="btn btn-primary" role="button">Register interest</a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -137,6 +140,7 @@
                         <p>Just a note to say that there's no-one on in Coding Grace called Grace. :-)</p>
 
                         <p class="text-center"><a href="mailto:contact@codinggrace.com" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-envelope"></span> contact@codinggrace.com</a>
+                        </p>
                     </div>
                 </div>
             </div>
