--- a/templates/codinggrace_django/about.html
+++ b/templates/codinggrace_django/about.html
@@ -56,7 +56,7 @@
 
 
     <div class="row" id="chapter">
-            <div class="col-sm-3 col-md-3">
+            <div class="col-md-3">
                 <div class="thumbnail">
 
                     <div class="caption">
@@ -73,7 +73,7 @@
                     </div>
                 </div>
             </div>
-             <div class="ccol-sm-3 col-md-3">
+             <div class="col-md-3">
                 <div class="thumbnail">
                     <div class="caption">
                         <h2><span class="glyphicon glyphicon-heart"></span> Community</h2>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
             </div>
-            <div class="ccol-sm-3 col-md-3">
+            <div class="col-md-3">
                 <div class="thumbnail">
                     <div class="caption">
                         <h2><span class="glyphicon glyphicon-user"></span> Call for Mentors</h2>
@@ -124,7 +124,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-3 col-md-3 ">
+            <div class="col-md-3 ">
                 <div class="thumbnail">
                     <div class="caption">
                         <h2><span class="glyphicon glyphicon-info-sign"></span> Contact Details</h2>
