news doesn't have to be chapter news. Also displays non-chapter news in news index page as well as all news page.

--- a/news/templates/news/all_articles.html
+++ b/news/templates/news/all_articles.html
@@ -30,6 +30,7 @@
 					{% endif %}
 				</li>
 				{% endfor %}
+				<li class="list-group-item"><a href="/news/all_articles/other"><h3 class="tk-cooper-black-std">Non-chapter news</h3></a></li>
 			</ul>
 			{% include 'news/tweets.html' %}
 		</div>
