--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -39,6 +39,21 @@
 				    	</div>
 				    </div>
 				</div>
+
+				<div class="panel panel-default">
+				    <div class="panel-heading">
+				      <h4 class="panel-title">
+				        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+				          <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><h3 class="tk-cooper-black-std">Non-Chapter News</h3></a></h4>
+				        </a>
+				      </h4>
+				    </div>
+				    <div id="collapseTwo" class="panel-collapse collapse">
+				      <div class="panel-body">
+				        <p class="side"><a href="/news/all_articles/other">Other news</a></p>
+				      </div>
+				    </div>
+				</div>
 			</div>
 			{% include 'news/tweets.html' %}
 		</div> <!-- col-md-2 news-->
