--- a/templates/codinggrace_django/index.html
+++ b/templates/codinggrace_django/index.html
@@ -10,10 +10,11 @@
         {% for event in events_list %}
         <div class="col-md-2"></div>
         <div class="col-md-10">
-            <h1 class="tk-cooper-black-std"><a href="{% url 'events:event_detail' event.slug event.id %}"><span class="glyphicon glyphicon-bullhorn"></span> {{event.title}}</a></h1>
+            <h1 class="tk-cooper-black-std"><a href="{% url 'events:event_detail' event.slug event.id %}"><span class="glyphicon glyphicon-bullhorn"></span> {{event.title}}</a> {% if event.is_cancelled %}<span class="label label-danger">Cancelled</span>{% endif %}</h1>
             <h1><span class="glyphicon glyphicon-time"></span> {{ event.start_datetime|timeuntil }} left</h1>
             <div class="row">
                 <section class="col-md-9">
+
                     {% for level in event.level_type.all %}{{ level }}{% endfor %} <span class="glyphicon glyphicon-play"></span> <span class="glyphicon glyphicon-map-marker"></span> <a href="/chapters/{{event.location.city}}">{{event.location.city|title}}</a> <span class="glyphicon glyphicon-play"></span>  <span class="glyphicon glyphicon-calendar"></span> <span class="">{{event.start_datetime|date:"D, dS M Y"}} {{ event.start_datetime|time:"H:i e" }}</span>  <span class="glyphicon glyphicon-play"></span> <span class="glyphicon glyphicon-euro"></span><span class="">{{event.cost}}</span>
                 </section>
             </div>
@@ -27,8 +28,7 @@
                 {% endif %}
                 </section>
                 <section class="col-md-2 ">
-
-                <a href="{% url 'events:event_detail' event.slug event.id %}" class="btn btn-success btn-lg" role="button">More Details</a>
+                    <a href="{% url 'events:event_detail' event.slug event.id %}" class="btn btn-success btn-lg" role="button">More Details</a>
                 </section>
             </div>
         </div>
