--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,12 +105,26 @@ footer a:active {color:white; text-decoration:underline;}  /* selected link */
 #chapter h2, #chapter h3{
     font-weight: bold;
 }
-h1#chapters, h1#resources{
-    background-color: #F7A21B;
+h1#chapters, h1#resources, #get_involved h1{
+    background-color: rgba(247, 162, 27, 1);
     color:white;
     font-size: 72px;
     font-weight: bold;
     padding: 10px;
+    text-shadow: 3px 3px 0 #000,
+     -1px -1px 0 #000,
+      1px -1px 0 #000,
+      -1px 1px 0 #000,
+       1px 1px 0 #000;
+}
+h1#chapters, h1#resources{
+
+
+}
+
+#get_involved h1{
+background-color: rgba(247, 162, 27, 0.7);
+
 }
 
 #chapter .thumbnail{
