added title of news post

--- a/news/templates/news/article.html
+++ b/news/templates/news/article.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}News{% endblock %}
+{% block title %}[News] {{ article.title }}{% endblock %}
 
 {% load my_md %}
 
