--- a/templates/codinggrace_django/index.html
+++ b/templates/codinggrace_django/index.html
@@ -36,7 +36,11 @@
 
         {% endfor %}
     {% else %}
-        <h1>Nothing to see here</h1>
+    <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+            <h1 class="text-center"><span class="glyphicon glyphicon-info-sign"></span> We have more events coming up, watch this space.</h1>
+        </div>
+    </div>
     {% endif %}
     </div>
 </div>
