removed the includes lunch. must have copied by accident

--- a/events/templates/events/index.html
+++ b/events/templates/events/index.html
@@ -40,7 +40,7 @@
                 {% else %}
                     {{event.description|md|safe|truncatewords:30}}
                 {% endif %}
-                <p>EUR{{event.cost}} (Includes lunch)</p>
+                <p>EUR{{event.cost}}</p>
                 </section>
                 <section class="col-md-2">
                 <a href="{{ the_url }}" class="btn btn-success btn-lg" role="button">Details <span class="glyphicon glyphicon-chevron-right"></span></a>
