minor update in the about page

--- a/templates/codinggrace_django/about.html
+++ b/templates/codinggrace_django/about.html
@@ -9,7 +9,7 @@
                 Coding Grace are a group of developers based in Ireland who love to code and do other geeky and not necessarily crafty activities. Some of us code full-time, or just for fun (or both). We have people who are part of other technical user groups such as <a href="http://dublinalt.net/">Dublin ALT.NET</a>, <a href="http://gamecraft.it">GameCraft</a>, <a href="http://python.ie/">Python Ireland</a>, <a href="http://www.rubyireland.com/">Ruby Ireland</a> and more…
             </p>
             <p>
-                We provide female-friendly workshops and events in an environment for developers and aspiring developers mentored by majority female instructors.
+                We provide female-friendly workshops and events in an environment for developers and aspiring developers mentored by diverse instructors from the industry.
             </p>
             <p>
                 Where many events tend to have more males than females, we aim to encourage many females to come along to our workshops and learn to code and more. We also encourage any females who want to mentor technical material to help out, it’s not that scary after all.
