--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,24 +105,25 @@ footer a:active {color:white; text-decoration:underline;}  /* selected link */
 #chapter h2, #chapter h3{
     font-weight: bold;
 }
-h1#chapters, h1#resources, #get_involved h1{
+
+h1#chapters, h1#resources, h1#sponsors{
     background-color: rgba(247, 162, 27, 1);
     color:white;
     font-size: 72px;
     font-weight: bold;
     padding: 10px;
+
+}
+
+h1#chapters, h1#resources, #get_involved h1{
     text-shadow: 3px 3px 0 #000,
      -1px -1px 0 #000,
       1px -1px 0 #000,
       -1px 1px 0 #000,
        1px 1px 0 #000;
 }
-h1#chapters, h1#resources{
 
-
-}
-
-#get_involved h1{
+#get_involved h1 {
 background-color: rgba(247, 162, 27, 0.7);
 
 }
