--- a/events/static/events/css/style.css
+++ b/events/static/events/css/style.css
@@ -1,3 +1,19 @@
+.flex-events-container {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-justify-content: space-around;
+    justify-content: space-around;
+    margin-left:20px;
+    margin-right:20px;
+}
+
+.flex-event-item {
+    margin: 10px;
+    width: 200px;
+}
+
 h1#events, h1#past-events{
     background-color: #A16609;
     margin-top:0;
