--- a/events/templates/events/index.html
+++ b/events/templates/events/index.html
@@ -64,9 +64,9 @@
 <div class="past-events">
     {% for year_event in past_events %}
     <h2>{{year_event.0}}</h2>
-    <div class="flex-container">
+    <div class="flex-events-container">
         {% for monthly_event in year_event.1 %}
-        <div class="flex-item">
+        <div class="flex-event-item">
             <div class="row past-events-months">
                 <h3>{{monthly_event.0|capfirst}}</h3>
                 <ul>
