updated info on chapters page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -124,6 +124,7 @@ h1#chapters, h1#resources, #get_involved h1{
 }
 
 #get_involved h1 {
+color:white;
 background-color: rgba(247, 162, 27, 0.7);
 
 }
