--- a/templates/codinggrace_django/about.html
+++ b/templates/codinggrace_django/about.html
@@ -55,97 +55,81 @@
     </div>
 
 
-    <div class="row" id="chapter">
-            <div class="col-md-3">
-                <div class="thumbnail">
 
-                    <div class="caption">
-                        <h2><span class="glyphicon glyphicon-map-marker"></span> Chapters</h2>
-                        <p>
-                            Currently Coding Grace is in <strong><a href="/chapters/dublin">DUBLIN</a></strong>, keep an eye out as we have another chapter in Ireland coming on board soon.
-                        </p>
-                         <p>
-                            If you are interested in running Coding Grace in your local area, please feel free to drop us an email.
-                        </p>
-                        <p class="text-center">
-                            <a href="/chapters/" class="btn btn-primary" role="button">More info</a>
-                        </p>
-                    </div>
-                </div>
+    <div class="row flex-get-involved-container" id="chapter">
+        <div class="flex-get-involved-item">
+            <h2><span class="glyphicon glyphicon-map-marker"></span> Chapters</h2>
+            <p>
+                Currently Coding Grace is in <strong><a href="/chapters/dublin">DUBLIN</a></strong>, keep an eye out as we have another chapter in Ireland coming on board soon.
+            </p>
+            <p>
+                If you are interested in running Coding Grace in your local area, please feel free to drop us an email.
+            </p>
+            <p class="text-center">
+                <a href="/chapters/" class="btn btn-primary" role="button">More info</a>
+            </p>
+        </div>
+
+        <div class="flex-get-involved-item">
+            <h2><span class="glyphicon glyphicon-heart"></span> Community</h2>
+            <h4>
+                Join our <a href="https://groups.google.com/forum/#!forum/coding-grace">Discussion Forum</a>
+            </h4>
+            <h4>
+                Follow us on <a href="https://twitter.com/codinggrace">@CodingGrace</a>
+            </h4>
+            <h4>
+                Like us on <a href="https://www.facebook.com/pages/Coding-Grace/501098363273457">Facebook Page</a>
+            </h4>
+            <!-- Begin MailChimp Signup Form -->
+            <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+            <style type="text/css">
+                #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+                /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+                   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+            </style>
+            <div id="mc_embed_signup">
+            <form action="//codinggrace.us7.list-manage.com/subscribe/post?u=8612b25618972d14df5c6a1fb&amp;id=78108add1f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <label for="mce-EMAIL">Subscribe to our monthly newsletter</label>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;"><input type="text" name="b_8612b25618972d14df5c6a1fb_78108add1f" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            </form>
             </div>
-             <div class="col-md-3">
-                <div class="thumbnail">
-                    <div class="caption">
-                        <h2><span class="glyphicon glyphicon-heart"></span> Community</h2>
-                        <h4>
-                            Join our <a href="https://groups.google.com/forum/#!forum/coding-grace">Discussion Forum</a>
-                        </h4>
-                        <h4>
-                            Follow us on <a href="https://twitter.com/codinggrace">@CodingGrace</a>
-                        </h4>
-                        <h4>
-                            Like us on <a href="https://www.facebook.com/pages/Coding-Grace/501098363273457">Facebook Page</a>
-                        </h4>
-                        <!-- Begin MailChimp Signup Form -->
-                        <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-                        <style type="text/css">
-                            #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-                            /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-                               We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-                        </style>
-                        <div id="mc_embed_signup">
-                        <form action="//codinggrace.us7.list-manage.com/subscribe/post?u=8612b25618972d14df5c6a1fb&amp;id=78108add1f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                            <label for="mce-EMAIL">Subscribe to our monthly newsletter</label>
-                            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                            <div style="position: absolute; left: -5000px;"><input type="text" name="b_8612b25618972d14df5c6a1fb_78108add1f" tabindex="-1" value=""></div>
-                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                        </form>
-                        </div>
 
-                        <!--End mc_embed_signup-->
+            <!--End mc_embed_signup-->
+        </div>
+        <div class="flex-get-involved-item">
+            <h2><span class="glyphicon glyphicon-user"></span> Call for Mentors</h2>
+            <p>
+                If you are interested in volunteering, please register your interest.
+            </p>
+            <p>
+                We welcome people from all diverse backgrounds and levels to help out.
 
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="thumbnail">
-                    <div class="caption">
-                        <h2><span class="glyphicon glyphicon-user"></span> Call for Mentors</h2>
-                        <p>
-                            If you are interested in volunteering, please register your interest.
-                        </p>
-                        <p>
-                            We welcome people from all diverse backgrounds and levels to help out.
+            </p>
+            <p class="text-center"><a href="https://docs.google.com/forms/d/12XbtEtgY_V1quYNgD3SHMPcXB2kDiNHzRl7FvVIaISc/viewform?usp=send_form" class="btn btn-primary" role="button">Register interest</a>
+            </p>
+        </div>
 
-                        </p>
-                        <p class="text-center"><a href="https://docs.google.com/forms/d/12XbtEtgY_V1quYNgD3SHMPcXB2kDiNHzRl7FvVIaISc/viewform?usp=send_form" class="btn btn-primary" role="button">Register interest</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 ">
-                <div class="thumbnail">
-                    <div class="caption">
-                        <h2><span class="glyphicon glyphicon-info-sign"></span> Contact Details</h2>
-                        <p>
-                            If you want to contact us regarding
-                            <ul>
-                                <li>sponsorships</li>
-                                <li>workshops</li>
-                                <li>mentoring</li>
-                            </ul>
-                            or just because you are curious, drop us an email.
-                        </p>
-                        <p>Just a note to say that there's no-one on in Coding Grace called Grace. :-)</p>
+        <div class="flex-get-involved-item">
+            <h2><span class="glyphicon glyphicon-info-sign"></span> Contact Details</h2>
+            <p>
+                If you want to contact us regarding
+                <ul>
+                    <li>sponsorships</li>
+                    <li>workshops</li>
+                    <li>mentoring</li>
+                </ul>
+                or just because you are curious, drop us an email.
+            </p>
+            <p>Just a note to say that there's no-one on in Coding Grace called Grace. :-)</p>
 
-                        <p class="text-center"><a href="mailto:contact@codinggrace.com" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-envelope"></span> contact@codinggrace.com</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
+            <p class="text-center"><a href="mailto:contact@codinggrace.com" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-envelope"></span> contact@codinggrace.com</a>
+            </p>
+        </div>
     </div>
-
 
 </div>
 
