--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,12 +8,8 @@ header{
     background-repeat:no-repeat;
     color:#F7A21B;
     padding:20px 0;
-    /*background-color: red;*/
 }
 
-header .user{
-    /*background-color: red;*/
-}
 footer {
     background-color: #E45635;
     padding-top: 20px;
@@ -32,14 +28,11 @@ footer a:active {color:white; text-decoration:underline;}  /* selected link */
     font-weight: bold;
 }
 
-.about h2{
-    font-size: 64px;
-}
+.about h2{ font-size: 64px; }
 
 .codeofconduct{
     background-color: black;
     color: white;
-    /*padding: 20px 0;*/
     padding-top:40px;
     padding-bottom:40px;
 }
@@ -50,13 +43,8 @@ footer a:active {color:white; text-decoration:underline;}  /* selected link */
     font-weight: bold;
 }
 
-.codeofconduct h2{
-    color: #F7A21B;
-}
+.codeofconduct h2{ color: #F7A21B; }
 
-#colophon {
-    /*background-color: #F7A21B;*/
-}
 #colophon h1 {
     color: white;
     background-color: #F7A21B;
@@ -68,9 +56,7 @@ footer a:active {color:white; text-decoration:underline;}  /* selected link */
     background-color: rgba(247, 162, 27, 0.7);
     padding: 15px;
 }
-#colophon section{
-    font-size: 24px;
-}
+#colophon section{ font-size: 24px; }
 
 .events {
     background-color: #F7A21B;
@@ -88,7 +74,6 @@ footer a:active {color:white; text-decoration:underline;}  /* selected link */
 
 .events .highlight{
     background-color:black;
-    /*color:#7ED321;*/
     color:white;
 }
 
@@ -111,20 +96,10 @@ footer a:active {color:white; text-decoration:underline;}  /* selected link */
     margin: 10px;
 }
 
-#chapter, .panel-heading.chapter {
-    background-color: #F7A21B;
-    /*padding: 10px;*/
-    /*color:white;*/
-}
+#chapter, .panel-heading.chapter { background-color: #F7A21B; }
 
-/*#chapter h1{
-    font-size: 72px;
-    font-weight: bold;
-    padding: 10px;
-}*/
-#chapter h2, #chapter h3{
-    font-weight: bold;
-}
+
+#chapter h2, #chapter h3{ font-weight: bold; }
 
 h1#chapters, h1#resources, h1#sponsors{
     background-color: rgba(247, 162, 27, 1);
@@ -144,9 +119,8 @@ h1#chapters, h1#resources, #get_involved h1{
 }
 
 #get_involved h1 {
-color:white;
-background-color: rgba(247, 162, 27, 0.7);
-
+    color:white;
+    background-color: rgba(247, 162, 27, 0.7);
 }
 
 #chapter .thumbnail{
@@ -155,12 +129,9 @@ background-color: rgba(247, 162, 27, 0.7);
     padding-bottom: 20px;
 }
 
-#chapter .thumbnail .btn{
-    /*margin-top:10px;*/
-}
 .chapter-news{background-color: #B1843F;}
-h1.chapter-news{
 
+h1.chapter-news{
     color:white;
     padding:10px;
 }
@@ -200,7 +171,6 @@ div.chapter-past-events{
 
 div.other-chapters{
     margin-top: -10px;
-
     opacity: 0.8;
 }
 
@@ -218,38 +188,21 @@ div.other-chapters{
     margin-top: -10px;
 
 }
-.resources div+h1, .resources div+h2{
-    margin-top: 10px;
-    /*background-color:rgba(247, 162, 27, 0.8);*/
-}
+.resources div+h1, .resources div+h2{ margin-top: 10px; }
+.resources #disqus h1 { margin-top: 10px; }
+.resources .panel-heading{ background-color: rgba(247, 162, 27, 0.6); }
 
-.resources #disqus h1 {
-    margin-top: 10px;
-}
-
-.resources .panel-heading{
-    background-color: rgba(247, 162, 27, 0.6);
-}
 /*CODE OF CONDUCT*/
-.conduct-head{
-    background-color: #F7A21B;
-}
+.conduct-head{ background-color: #F7A21B; }
 .conduct-head h1{
     color: white;
     font-size:96px;
     font-weight: bold;
 }
 
-#coc #full{
-    background-color: #E4E4E4;
-}
-#coc #info{
-    background-color: #F1F1F1;
-}
-
-#coc #contact_otherinfo{
-    color: white;
-}
+#coc #full{ background-color: #E4E4E4; }
+#coc #info{ background-color: #F1F1F1; }
+#coc #contact_otherinfo{ color: white; }
 
 /* Background image, just add top:XXpx, see about-peeps as example */
 .bg-image{
@@ -266,7 +219,6 @@ div.other-chapters{
     padding-top:10px;
     padding-bottom:10px;
     margin-bottom:-10px;
-
 }
 
 .about-peeps .bg-image{
