--- a/templates/codinggrace_django/sponsors.html
+++ b/templates/codinggrace_django/sponsors.html
@@ -17,6 +17,38 @@
 		If your company is interested in getting involved with our events, you can email us at <a href="mailto:contact@codinggrace.com">contact@codinggrace.com</a>.
 	</div>
 
+	
+	<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+		{% for sponsor, events_list in events_sponsors_list %}
+		<div class="panel panel-default">
+			<div class="panel-heading" role="tab" id="heading{{sponsor.id}}">
+			  <h4 class="panel-title">
+			    <a {%if not forloop.first %}class="collapsed"{% endif %} role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{sponsor.id}}" aria-expanded="{% if forloop.first %}true{% else %}false{% endif %}" aria-controls="collapse{{sponsor.id}}">
+			      {{sponsor.name}}
+			    </a>
+			  </h4>
+			</div>
+			<div id="collapse{{sponsor.id}}" class="panel-collapse collapse {% if forloop.first %}in{% endif %}" role="tabpanel" aria-labelledby="heading{{sponsor.id}}">
+			  <div class="panel-body flex-events-container">
+			  	<div class="flex-events-item">
+				  	<div>{{sponsor.blurb|md|safe}}</div>
+				  	<div>URL: <a href="{{key.url}}">{{sponsor.url}}</a></div>
+				</div>
+				<div class="flex-events-item">
+					<div class="panel panel-info">
+						<div class="panel-heading">Events supported by {{sponsor.name}}</div>
+						{% for event in events_list %}
+						<a href="{% url 'events:event_detail' event.slug event.id %}" class="list-group-item">{{event.title}} ({{event.start_datetime}})</a>
+						{% endfor %}
+					</div>
+				</div>
+			  </div>
+			</div>
+		</div>
+		{% endfor %}
+	</div>
+	
+
 	{% for sponsor, events_list in events_sponsors_list %}
 	<h1 class="tk-cooper-black-std">{{sponsor.name}}</h1>
 	<div class="row">
@@ -41,14 +73,6 @@
 			{% endfor %}
 			</div>
 			</div>
-
-			
-			
-			<!--<ul>
-			{% for sponsorship in sponsorship_list %}
-				<li><a href="{{s.event_url}}">{{sponsorship.title}} ({{sponsorship.start_datetime}})</a></li>
-			{% endfor %}
-			</ul>-->
 		</div>
 	</div>
 
