--- a/templates/codinggrace_django/supporters.html
+++ b/templates/codinggrace_django/supporters.html
@@ -16,72 +16,96 @@
 	<h1 class="tk-cooper-black-std">Coding Grace Foundation Members</h1>
 	<p>Coding Grace Foundation is made up of two board members and one member.</p>	
 	<div class="flex-supporters-container">
-		<div class="flex-supporters-item text-center thumbnail">
+		<div class="flex-supporters-item text-center thumbnail founder">
 			<img src="http://i.imgur.com/ngRYPfub.jpg" alt="Andrea Magnorsky" class="img-circle" width="30%">
 			<div class="caption">
 		        <h2><a href="https://twitter.com/roundcrisis">Andrea Magnorsky</a></h2>
 		        <p>Director/Co-Founder</p>
+		        <p class="small">She's a Senior Software Engineer at Workday, Co-Founder - CTO of BatCat Games, Director/Co-Founder of GameCraft Foundation, and Co-Founder/Organiser of Functional Kats.</p>
 	      	</div>
 		</div>
-		<div class="flex-supporters-item text-center thumbnail">
+		<div class="flex-supporters-item text-center thumbnail founder">
 			<img src="http://i.imgur.com/hpUfWOVb.jpg" alt="Michael Twomey" class="img-circle" width="30%">
 			<div class="caption">
 		        <h2><a href="https://twitter.com/micktwomey">Michael Twomey</a></h2>
 		        <p>Director/Co-Founder</p>
+		        <p class="small">He's a Senior Software Engineer at Udemy, Director/Co-Founder of GameCraft Foundation and Founder/Organiser of Dublin Elm User Group</p>
 	      	</div>
 		</div>
-		<div class="flex-supporters-item text-center thumbnail">
+		<div class="flex-supporters-item text-center thumbnail founder">
 			<img src="http://i.imgur.com/hPpuvHm.jpg" alt="Vicky Twomey-Lee" class="img-circle" width="30%">
 			<div class="caption">
-		        <h2><a href="https://twitter.com/whykay">Vicky Twomey-Lee</a></h2>
+		        <h2><a href="https://about.me/whykay">Vicky Twomey-Lee</a></h2>
 		        <p>Member/Co-Founder</p>
+		        <p>Developer in past life, now found organising tech events and conferences, with a focus on diversity on tech. Involved in many not-for-profits to be listed here. :-)</p>
 	      	</div>
 		</div>
 	</div>
 
 	<h1 class="tk-cooper-black-std">Advisors</h1>
-	<p>Big thanks to the following people who spent time giving me advice and listening to me. I'm still updating this list with the awesome people who've been so awesome. <small>(In alphabetical order)</small></p>
+	<p>Big thanks to the following people who spent time giving me advice and listening to me. I'm still updating this list with the awesome people. <small>(In alphabetical order)</small></p>
 	<div class="flex-supporters-container">
 		<div class="flex-supporters-item text-center thumbnail advisor">
 			<img src="https://robohash.org/mary-carty.png?set=set3&bgset=bg2" alt="Mary Carty" class="img-circle" width="30%">
 			<div class="caption">
-		        <p><a href="https://www.linkedin.com/in/marycarty">Mary Carty</a></p>
+		        <h4><a href="https://www.linkedin.com/in/marycarty">Mary Carty</a></h4>
+		        <p class="small">Executive Director Blackstone LaunchPad, Co-founder Outbox Incubator</p>
 	      	</div>
 		</div>
 		<div class="flex-supporters-item text-center thumbnail advisor">
 			<img src="https://robohash.org/alexandra-etienne.png?set=set3&bgset=bg2" alt="Alexandra Etienne" class="img-circle" width="30%">
 			<div class="caption">
-		        <p><a href="https://www.linkedin.com/in/alexandra-etienne-112290102">Alexandra Etienne</a></p>
+		        <h4><a href="https://www.linkedin.com/in/alexandra-etienne-112290102">Alexandra Etienne</a></h4>
+		        <p class="small">ARToolkit Evangelist at DAQRI</p>
+	      	</div>
+		</div>
+		<div class="flex-supporters-item text-center thumbnail advisor">
+			<img src="https://robohash.org/edel-flynn.png?set=set3&bgset=bg2" alt="Edel Flynn" class="img-circle" width="30%">
+			<div class="caption">
+		        <h4><a href="https://www.linkedin.com/in/marycarty">Edel Flynn</a></h4>
+		        <p class="small">Director and Co-Founder at Element78Space</p>
 	      	</div>
 		</div>
 		<div class="flex-supporters-item text-center thumbnail advisor">
 			<img src="https://robohash.org/paul-hayes?set=set3&bgset=bg2" alt="Paul Hayes" class="img-circle" width="30%">
 			<div class="caption">
-		        <p><a href="https://www.linkedin.com/in/paulhayes4">Paul Hayes</a></p>
+		        <h4><a href="https://www.linkedin.com/in/paulhayes4">Paul Hayes</a></h4>
+		        <p class="small">CEO at beachhut</p>
 	      	</div>
 		</div>
 		<div class="flex-supporters-item text-center thumbnail advisor">
 			<img src="https://robohash.org/tony-kelly?set=set3&bgset=bg2" alt="Tony Kelly" class="img-circle" width="30%">
 			<div class="caption">
-		        <p><a href="https://www.linkedin.com/in/tonykelly">Tony Kelly</a></p>
+		        <h4><a href="https://www.linkedin.com/in/tonykelly">Tony Kelly</a></h4>
+		        <p class="small">CEO at Spicebox.io</p>
 	      	</div>
 		</div>
 		<div class="flex-supporters-item text-center thumbnail advisor">
 			<img src="https://robohash.org/eamon-leonard?set=set3&bgset=bg2" alt="Eamon Leonard" class="img-circle" width="30%">
 			<div class="caption">
-		        <p><a href="https://www.linkedin.com/in/eamonleonard">Eamon Leonard</a></p>
+		        <h4><a href="https://www.linkedin.com/in/eamonleonard">Eamon Leonard</a></h4>
+		        <p class="small">Founder at Cohort, Inc</p>
+	      	</div>
+		</div>
+				<div class="flex-supporters-item text-center thumbnail advisor">
+			<img src="https://robohash.org/cian-o-cuilleanain?set=set3&bgset=bg2" alt="Cian O'Cuilleanain" class="img-circle" width="30%">
+			<div class="caption">
+		        <h4><a href="https://about.me/cian.o">Cian O'Cuilleanain</a></h4>
+		        <p class="small">Co-Founder at Baily Labs</p>
 	      	</div>
 		</div>
 		<div class="flex-supporters-item text-center thumbnail advisor">
 			<img src="https://robohash.org/pauline-sargent?set=set3&bgset=bg2" alt="Pauline Sargent" class="img-circle" width="30%">
 			<div class="caption">
-		        <p><a href="https://www.linkedin.com/in/paulinesargent">Pauline Sargent</a></p>
+		        <h4><a href="https://www.linkedin.com/in/paulinesargent">Pauline Sargent</a></h4>
+		        <p class="small">Digital Marketing Lecturer I Social Media Trainer I Speaker I Advocate for Women in Tech</p>
 	      	</div>
 		</div>
 		<div class="flex-supporters-item text-center thumbnail advisor">
 			<img src="https://robohash.org/andreea-wade?set=set3&bgset=bg2" alt="Andreea Wade" class="img-circle" width="30%">
 			<div class="caption">
-		        <p><a href="https://www.linkedin.com/in/andreeawade">Andreea Wade</a></p>
+		        <h4><a href="https://www.linkedin.com/in/andreeawade">Andreea Wade</a></h4>
+		        <p class="small">Co Founder & CEO at Opening.io</p>
 	      	</div>
 		</div>
 	</div>
@@ -92,43 +116,9 @@
 
 
 
-
-	{% for sponsor, events_list in events_sponsors_list %}
-	<div class="panel panel-default ">
-		<div class="panel-heading" role="tab" id="heading{{sponsor.id}}">
-		  <h4 class="panel-title">
-		    <a {%if not forloop.first %}class="collapsed"{% endif %} role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{sponsor.id}}" aria-expanded="{% if forloop.first %}true{% else %}false{% endif %}" aria-controls="collapse{{sponsor.id}}">
-		      {{sponsor.name}}
-		    </a>
-		  </h4>
-		</div>
-		<div id="collapse{{sponsor.id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{sponsor.id}}">
-		  <div class="panel-body flex-events-container">
-		  	<div class="flex-events-item">
-			  	<div>{{sponsor.blurb|md|safe}}</div>
-			  	<div>URL: <a href="{{key.url}}">{{sponsor.url}}</a></div>
-			</div>
-			<div class="flex-events-item">
-				<div class="panel panel-info">
-					<div class="panel-heading">Events supported by {{sponsor.name}}</div>
-					{% for event in events_list %}
-					<a href="{% url 'events:event_detail' event.slug event.id %}" class="list-group-item">{{event.title}} ({{event.start_datetime}})</a>
-					{% endfor %}
-				</div>
-			</div>
-		  </div>
-		</div>
-	</div>
-	{% endfor %}
-
-
-
-
-
-	<div class="flex-supporters-sponsors-container"> 		
-		<div class="flex-supporters-sponsors-item">
+	<div class="flex-companies-container"> 		
+		<div class="flex-companies-item">
 			<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-				<h1>Companies</h1>
 				{% for sponsor, events_list in events_sponsors_list %}
 				<div class="panel panel-default">
 					<div class="panel-heading" role="tab" id="heading{{sponsor.id}}">
@@ -160,7 +150,6 @@
 		</div>	
 	</div>
 		
-	
 
 </div>
 {% endblock %}
